REGRESSION(r219045): The <body> element does not get repainted when its background image finishes decoding https://bugs.webkit.org/show_bug.cgi?id=174376

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2017-07-11
Reviewed by Simon Fraser.

Source/WebCore:

When adding a CachedImageClient to CachedImage::m_pendingImageDrawingClients
and the CachedImageClient is not one of the CachedImage::m_clients, we
should cancel the repaint optimization in CachedImage::imageFrameAvailable().
This can be done by adding all the CachedImage::m_clients to CachedImage::
m_pendingImageDrawingClients.

Test: fast/images/async-image-body-background-image.html

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::addPendingImageDrawingClient):

LayoutTests:

* fast/images/async-image-body-background-image-expected.html: Added.
* fast/images/async-image-body-background-image.html: Added.

Canonical link: https://commits.webkit.org/191205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219364 268f45cc-cd09-0410-ab3c-d52691b4dbfc